Make sure the page sub-header is always on its own line, and drop its font size on narrower screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ html {
 
 .page-header-group .sub-header {
 	clear: both;
+	display: block;
 	font-size: 3.6em;
 	font-weight: 600;
 	letter-spacing: .05em;
@@ -704,6 +705,10 @@ main ul {
 }
 
 @media only screen and (max-width: 530px) {
+	.page-header-group .sub-header {
+		font-size: 8.5vw;
+	}
+
 	.home .wsuwp-content-syndicate-list li {
 		flex: 1 0 100%;
 		width: 100%;
