--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ html {
 
 .page-header-group .sub-header {
 	clear: both;
+	display: block;
 	font-size: 3.6em;
 	font-weight: 600;
 	letter-spacing: .05em;
@@ -738,6 +739,10 @@ main ul {
 }
 
 @media only screen and (max-width: 530px) {
+	.page-header-group .sub-header {
+		font-size: 8.5vw;
+	}
+
 	.home .wsuwp-content-syndicate-list li {
 		-webkit-box-flex: 1;
 		    -ms-flex: 1 0 100%;
